--- a/index.ipynb
+++ b/index.ipynb
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # "
+    "number_of_weeks = 3"
    ]
   },
   {
@@ -113,11 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks"
    ]
   },
   {
